Support stability levels